--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,1 +1,37 @@
-<p>footer works!</p>
+<section class="wrapper--footer--section">
+  <div class="wrapper--footer container">
+    <div class="footer--logo">
+      <img src="assets/img/Logo.png" alt="">
+    </div>
+    <div class="footer--info">
+      <div class="footer--info--description">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud.
+      </div>
+      <div class="footer--nav">
+        <nav>
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Service</a></li>
+            <li><a href="#">Token Sale</a></li>
+            <li><a href="#">FAQ’s</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Blog</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+    <div class="footer--action">
+      <input type="text" placeholder="Email Address">
+      <button><img src="assets/icons/arrow.png" alt=""></button>
+    </div>
+    <div class="footer--privacy">
+      <div class="footer--privacy--info">
+        © 2021 GPD Holdings, LLC FinCEN MSB
+      </div>
+      <div class="footer--privacy--info">
+        Privacy Policy and Terms of Service
+      </div>
+    </div>
+  </div>
+</section>
+
